@@ -107,6 +107,8 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
     - x2goserver/bin/x2gopath.in: switch to bash.
     - x2goserver/bin/x2gopath.in: fix warning message to also include
       SHAREDIR.
+    - x2goserver/bin/x2gopath.in: add and use support for NXLIBDIR; drop the
+      lib-subdir detection.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
